manifest/nexus/nexus.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nexus3
  labels:
    app.kubernetes.io/name: nexus3
spec:
  replicas: 1
  serviceName: nexus3
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: nexus3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nexus3
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - worker-001
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                - nexus3
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: nexus3
        image: registry.cn-hangzhou.aliyuncs.com/devops-system/nexus3:3.78.2
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 200
        ports:
        - containerPort: 8081
          name: nexus3
        resources:
          requests:
            cpu: "4"
            memory: 8Gi
          limits:
            cpu: "4"
            memory: 8Gi
        livenessProbe:
          tcpSocket:
            port: 8081
          initialDelaySeconds: 20
          timeoutSeconds: 5
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8081
          initialDelaySeconds: 20
          timeoutSeconds: 5
          periodSeconds: 10
        volumeMounts:
        - name: data
          mountPath: /nexus-data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      storageClassName: nexus
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 100Gi
---
apiVersion: v1
kind: Service
metadata:
  name: nexus3
spec:
  ports:
  - port: 8081
  selector:
    app.kubernetes.io/name: nexus3
